# hsemail

./: .gitignore  .todo  .travis.yml  ChangeLog.md  LICENSE  Makefile  README  README.md  cabal.project  config  doc-test.hs  hsemail.cabal  package.conf.in  package.yaml  prologue.txt  self-test.hs
.github/workflows/: haskell-ci.yml  hlint.yml
Text/ParserCombinators/Parsec/: Rfc2234.hs  Rfc2821.hs  Rfc2822.hs
example/: Rfc2821.cf  message-test.hs  message-test.input  smtp-test.hs  smtp-test.input
src/Text/Parsec/: Rfc2234.hs  Rfc2821.hs  Rfc2822.hs
src/Text/ParserCombinators/Parsec/: Rfc2234.hs  Rfc2821.hs  Rfc2822.hs
test/: spec.hs
