name:          hsemail
version:       2.1.0
synopsis:      Parsec parsers for the RFC2822 Internet Message format
description:   Parsec parsers for the Internet Message format defined in RFC 2821 and
               2822.
license:       BSD3
license-file:  LICENSE
author:        Peter Simons,
               Ali Abrar,
               Gero Kriependorf,
               Marty Pauley
maintainer:    Peter Simons <simons@cryp.to>
stability:     stable
tested-with:   GHC == 7.0.4, GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3,
               GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.2
category:      Parsing
homepage:      https://github.com/peti/hsemail#readme
bug-reports:   https://github.com/peti/hsemail/issues
build-type:    Simple
cabal-version: >= 1.10

source-repository head
  type:     git
  location: https://github.com/peti/hsemail

library
  exposed-modules:  Text.Parsec.Rfc2234
                    Text.Parsec.Rfc2821
                    Text.Parsec.Rfc2822
  other-modules:    Paths_hsemail
  hs-source-dirs:   src
  build-depends:    base >= 3 && < 5, mtl, old-time, parsec >= 3.1
  default-language: Haskell2010

test-suite test-hsemail
  type:             exitcode-stdio-1.0
  main-is:          spec.hs
  hs-source-dirs:   test
  build-depends:    base >= 3 && < 5, hsemail, hspec, old-time, parsec >= 3.1
  default-language: Haskell2010
